Fixed invisible search bar
* added a custom background colour for search and results

--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -73,6 +73,7 @@
   &.is--visible {
     display: block;
     visibility: visible;
+    background-color: $search-background-color;
 
     &::after {
       content: "";
